# react-fastapi-study

./: README.md  amplify.yml
backend/: .dockerignore  Dockerfile  Dockerfile.build  callback_handler.py  deploy-lambda.sh  main.py  pyproject.toml  requirements.txt
backend/package/: main.py
backend/package/boto3-1.37.0.dist-info/: RECORD
backend/package/botocore-1.37.0.dist-info/: RECORD
backend/package/charset_normalizer-3.4.1.dist-info/: RECORD
backend/package/distro-1.9.0.dist-info/: RECORD
backend/package/fastapi-0.115.8.dist-info/: RECORD
backend/package/httpx-0.28.1.dist-info/: RECORD
backend/package/jmespath-1.0.1.dist-info/: RECORD
backend/package/jsonpatch-1.33.dist-info/: RECORD
backend/package/jsonpointer-3.0.0.dist-info/: RECORD
backend/package/langchain-0.3.19.dist-info/: RECORD
backend/package/langchain_core-0.3.39.dist-info/: RECORD
backend/package/numpy-2.2.3.dist-info/: RECORD
backend/package/openai-1.64.0.dist-info/: RECORD
backend/package/tqdm-4.67.1.dist-info/: RECORD
backend/package/uvicorn-0.34.0.dist-info/: RECORD
frontend/: amplify.yml
frontend/gpt-chat/: README.md  package-lock.json  package.json
frontend/gpt-chat/src/: App.js  ChatBot.css  index.js
