[tool.poetry]
name = "backend"
version = "0.1.0"
package-mode = false
description = ""
authors = ["nibura2002 <nibura2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
langchain-openai = "^0.3.6"
langchain = "^0.3.19"
mangum = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
